--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,12 +15,13 @@ build:
   script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
-  build:
-    - python                                 # [build_platform != target_platform]
-    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    - numpy                                  # [build_platform != target_platform]
-    - {{ compiler('cxx') }}
+#  build:
+#    - python                                 # [build_platform != target_platform]
+#    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+#    - numpy                                  # [build_platform != target_platform]
+#    - {{ compiler('cxx') }}
   host:
+    - cython
     - numpy
     - pip
     - python
