Cython in build

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,7 +15,8 @@ build:
   script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
-#  build:
+  build:
+    - cython
 #    - python                                 # [build_platform != target_platform]
 #    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
 #    - numpy                                  # [build_platform != target_platform]
