--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,7 @@ requirements:
 #    - python                                 # [build_platform != target_platform]
 #    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
 #    - numpy                                  # [build_platform != target_platform]
-#    - {{ compiler('cxx') }}
+    - {{ compiler('c') }}
   host:
     - cython
     - numpy
