--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,6 +21,7 @@ requirements:
 #    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
 #    - numpy                                  # [build_platform != target_platform]
     - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
   host:
     - cython
     - numpy
